{
  "version": 4,
  "terraform_version": "1.8.5",
  "serial": 161,
  "lineage": "fd959d95-b41e-5dca-9e8b-fea5339e4dfb",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "internal_allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2025-11-22T06:50:53.170-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/banded-charmer-478104-h0/global/firewalls/internal-allow-all",
            "log_config": [],
            "name": "internal-allow-all",
            "network": "https://www.googleapis.com/compute/v1/projects/banded-charmer-478104-h0/global/networks/spark-vpc",
            "priority": 1000,
            "project": "banded-charmer-478104-h0",
            "self_link": "https://www.googleapis.com/compute/v1/projects/banded-charmer-478104-h0/global/firewalls/internal-allow-all",
            "source_ranges": [
              "10.0.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ssl_allowed",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-11-22T04:52:20.052-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/banded-charmer-478104-h0/global/firewalls/ssh-allowed",
            "log_config": [],
            "name": "ssh-allowed",
            "network": "https://www.googleapis.com/compute/v1/projects/banded-charmer-478104-h0/global/networks/spark-vpc",
            "priority": 1000,
            "project": "banded-charmer-478104-h0",
            "self_link": "https://www.googleapis.com/compute/v1/projects/banded-charmer-478104-h0/global/firewalls/ssh-allowed",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "edge",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20251120",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/banded-charmer-478104-h0/zones/asia-southeast1-a/disks/edge-node"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/banded-charmer-478104-h0/zones/asia-southeast1-a/instances/edge-node",
            "instance_id": "7634231499009297650",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-small",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQCiETBrwrvE8uupoOnze0Rug/ak6JuJ9H5iFMZMpkYp3djPK6MXEJBfcJGoaj1wDbV50747zZyMArDoUwCKBlBLFU2w8HUwQvzULAtRjaLe/4bvacH4n5LHVUUKYVRkVfT2H/SFvSmxGyIXSCgSvoRaxU6Yjm/Hrc2DWBDNepquQB4mkVDUQC6KYevvv0SOtr7MLIS3I2MQmEmKcp1r/UWjYu3pKXQ7Wiq+fR/znbQsN1Q8MaZ0w/wEI087quF53OtCj1pdclDVEzyCBXyw6MFZC86a5NHCuPVxMkuSxUh0GJhXP+BPDZHN96jn/2fa/kjtgP+YBZGCR8QmJE9RWQwEd6o75N167OzIE0782VeYtbviRhzopZsr0hx3xmc+iYHZ4I1fAmAn/iPerOGLNMGoynCe/Za3xPRNKM3m8OK7G0 [...]
            },
            "metadata_fingerprint": "WCa7OEg9reU=",
            "name": "edge-node",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.240.228.94",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/banded-charmer-478104-h0/global/networks/spark-vpc",
                "network_ip": "10.0.0.6",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/banded-charmer-478104-h0/regions/asia-southeast1/subnetworks/spark-subnet",
                "subnetwork_project": "banded-charmer-478104-h0"
              }
            ],
            "project": "banded-charmer-478104-h0",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/banded-charmer-478104-h0/zones/asia-southeast1-a/instances/edge-node",
            "service_account": [
              {
                "email": "709168474238-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/devstorage.full_control"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "asia-southeast1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "master",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20251120",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/banded-charmer-478104-h0/zones/asia-southeast1-a/disks/spark-master"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/banded-charmer-478104-h0/zones/asia-southeast1-a/instances/spark-master",
            "instance_id": "4412052097592986866",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQCiETBrwrvE8uupoOnze0Rug/ak6JuJ9H5iFMZMpkYp3djPK6MXEJBfcJGoaj1wDbV50747zZyMArDoUwCKBlBLFU2w8HUwQvzULAtRjaLe/4bvacH4n5LHVUUKYVRkVfT2H/SFvSmxGyIXSCgSvoRaxU6Yjm/Hrc2DWBDNepquQB4mkVDUQC6KYevvv0SOtr7MLIS3I2MQmEmKcp1r/UWjYu3pKXQ7Wiq+fR/znbQsN1Q8MaZ0w/wEI087quF53OtCj1pdclDVEzyCBXyw6MFZC86a5NHCuPVxMkuSxUh0GJhXP+BPDZHN96jn/2fa/kjtgP+YBZGCR8QmJE9RWQwEd6o75N167OzIE0782VeYtbviRhzopZsr0hx3xmc+iYHZ4I1fAmAn/iPerOGLNMGoynCe/Za3xPRNKM3m8OK7G0 [...]
            },
            "metadata_fingerprint": "WCa7OEg9reU=",
            "name": "spark-master",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/banded-charmer-478104-h0/global/networks/spark-vpc",
                "network_ip": "10.0.0.5",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/banded-charmer-478104-h0/regions/asia-southeast1/subnetworks/spark-subnet",
                "subnetwork_project": "banded-charmer-478104-h0"
              }
            ],
            "project": "banded-charmer-478104-h0",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/banded-charmer-478104-h0/zones/asia-southeast1-a/instances/spark-master",
            "service_account": [
              {
                "email": "709168474238-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/devstorage.full_control"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "asia-southeast1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "storage",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20251120",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 50,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/banded-charmer-478104-h0/zones/asia-southeast1-a/disks/storage-node"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/banded-charmer-478104-h0/zones/asia-southeast1-a/instances/storage-node",
            "instance_id": "4457216144021654771",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQCiETBrwrvE8uupoOnze0Rug/ak6JuJ9H5iFMZMpkYp3djPK6MXEJBfcJGoaj1wDbV50747zZyMArDoUwCKBlBLFU2w8HUwQvzULAtRjaLe/4bvacH4n5LHVUUKYVRkVfT2H/SFvSmxGyIXSCgSvoRaxU6Yjm/Hrc2DWBDNepquQB4mkVDUQC6KYevvv0SOtr7MLIS3I2MQmEmKcp1r/UWjYu3pKXQ7Wiq+fR/znbQsN1Q8MaZ0w/wEI087quF53OtCj1pdclDVEzyCBXyw6MFZC86a5NHCuPVxMkuSxUh0GJhXP+BPDZHN96jn/2fa/kjtgP+YBZGCR8QmJE9RWQwEd6o75N167OzIE0782VeYtbviRhzopZsr0hx3xmc+iYHZ4I1fAmAn/iPerOGLNMGoynCe/Za3xPRNKM3m8OK7G0 [...]
            },
            "metadata_fingerprint": "WCa7OEg9reU=",
            "name": "storage-node",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/banded-charmer-478104-h0/global/networks/spark-vpc",
                "network_ip": "10.0.0.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/banded-charmer-478104-h0/regions/asia-southeast1/subnetworks/spark-subnet",
                "subnetwork_project": "banded-charmer-478104-h0"
              }
            ],
            "project": "banded-charmer-478104-h0",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/banded-charmer-478104-h0/zones/asia-southeast1-a/instances/storage-node",
            "service_account": [
              {
                "email": "709168474238-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/devstorage.full_control"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "asia-southeast1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20251120",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/banded-charmer-478104-h0/zones/asia-southeast1-a/disks/spark-worker-0"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/banded-charmer-478104-h0/zones/asia-southeast1-a/instances/spark-worker-0",
            "instance_id": "659928724611534066",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQCiETBrwrvE8uupoOnze0Rug/ak6JuJ9H5iFMZMpkYp3djPK6MXEJBfcJGoaj1wDbV50747zZyMArDoUwCKBlBLFU2w8HUwQvzULAtRjaLe/4bvacH4n5LHVUUKYVRkVfT2H/SFvSmxGyIXSCgSvoRaxU6Yjm/Hrc2DWBDNepquQB4mkVDUQC6KYevvv0SOtr7MLIS3I2MQmEmKcp1r/UWjYu3pKXQ7Wiq+fR/znbQsN1Q8MaZ0w/wEI087quF53OtCj1pdclDVEzyCBXyw6MFZC86a5NHCuPVxMkuSxUh0GJhXP+BPDZHN96jn/2fa/kjtgP+YBZGCR8QmJE9RWQwEd6o75N167OzIE0782VeYtbviRhzopZsr0hx3xmc+iYHZ4I1fAmAn/iPerOGLNMGoynCe/Za3xPRNKM3m8OK7G0 [...]
            },
            "metadata_fingerprint": "WCa7OEg9reU=",
            "name": "spark-worker-0",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/banded-charmer-478104-h0/global/networks/spark-vpc",
                "network_ip": "10.0.0.4",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/banded-charmer-478104-h0/regions/asia-southeast1/subnetworks/spark-subnet",
                "subnetwork_project": "banded-charmer-478104-h0"
              }
            ],
            "project": "banded-charmer-478104-h0",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/banded-charmer-478104-h0/zones/asia-southeast1-a/instances/spark-worker-0",
            "service_account": [
              {
                "email": "709168474238-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/devstorage.full_control"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "asia-southeast1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 6,
          "attributes": {
            "allow_stopping_for_update": true,
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20251120",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/banded-charmer-478104-h0/zones/asia-southeast1-a/disks/spark-worker-1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/banded-charmer-478104-h0/zones/asia-southeast1-a/instances/spark-worker-1",
            "instance_id": "4214037758601858291",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQCiETBrwrvE8uupoOnze0Rug/ak6JuJ9H5iFMZMpkYp3djPK6MXEJBfcJGoaj1wDbV50747zZyMArDoUwCKBlBLFU2w8HUwQvzULAtRjaLe/4bvacH4n5LHVUUKYVRkVfT2H/SFvSmxGyIXSCgSvoRaxU6Yjm/Hrc2DWBDNepquQB4mkVDUQC6KYevvv0SOtr7MLIS3I2MQmEmKcp1r/UWjYu3pKXQ7Wiq+fR/znbQsN1Q8MaZ0w/wEI087quF53OtCj1pdclDVEzyCBXyw6MFZC86a5NHCuPVxMkuSxUh0GJhXP+BPDZHN96jn/2fa/kjtgP+YBZGCR8QmJE9RWQwEd6o75N167OzIE0782VeYtbviRhzopZsr0hx3xmc+iYHZ4I1fAmAn/iPerOGLNMGoynCe/Za3xPRNKM3m8OK7G0 [...]
            },
            "metadata_fingerprint": "WCa7OEg9reU=",
            "name": "spark-worker-1",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/banded-charmer-478104-h0/global/networks/spark-vpc",
                "network_ip": "10.0.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/banded-charmer-478104-h0/regions/asia-southeast1/subnetworks/spark-subnet",
                "subnetwork_project": "banded-charmer-478104-h0"
              }
            ],
            "project": "banded-charmer-478104-h0",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/banded-charmer-478104-h0/zones/asia-southeast1-a/instances/spark-worker-1",
            "service_account": [
              {
                "email": "709168474238-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/devstorage.full_control"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "asia-southeast1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/banded-charmer-478104-h0/global/networks/spark-vpc",
            "mtu": 0,
            "name": "spark-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "4911491673823771383",
            "project": "banded-charmer-478104-h0",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/banded-charmer-478104-h0/global/networks/spark-vpc"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-11-22T04:52:20.967-08:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/banded-charmer-478104-h0/regions/asia-southeast1/subnetworks/spark-subnet",
            "ip_cidr_range": "10.0.0.0/16",
            "name": "spark-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/banded-charmer-478104-h0/global/networks/spark-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "banded-charmer-478104-h0",
            "purpose": "PRIVATE",
            "region": "asia-southeast1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/banded-charmer-478104-h0/regions/asia-southeast1/subnetworks/spark-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    }
  ]
}